[package]
name = "obs-window-helper"
version = "0.1.0"
description = "Provides a list of windows that can be captured by OBS"
edition = "2021"

[dependencies]
windows = { version = "0.58.0", features = ["Win32", "Win32_Graphics", "Win32_Graphics_Dwm", "Win32_System_ProcessStatus", "Win32_System_Threading", "Win32_UI", "Win32_UI_WindowsAndMessaging"] }
windows-result = "0.2.0"
winsafe = "0.0.21"
